5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1575_1334.log
== TEST (2019-03-12 11:55:09) 
-- CODE:
print(Adicao: , 5 + 3)

print(Subtracao: , 10-2)

print(Multiplicacao: , 4*2)

print(Divisao: , 16/2)

print(Resto: , 48/9 )

print(Potenciacao: , 64**0.5)
-- ERROR:
File "XXXX", line 1
    print(Adicao: , 5 + 3)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:55:23) 
-- CODE:
print('Adicao: , 5 + 3')

print(Subtracao: , 10-2)

print(Multiplicacao: , 4*2)

print(Divisao: , 16/2)

print(Resto: , 48/9 )

print(Potenciacao: , 64**0.5)
-- ERROR:
File "XXXX", line 3
    print(Subtracao: , 10-2)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:01) 
-- CODE:
print('Adicao: , 5 + 3')

print('Subtracao: , 10-2')

print('Multiplicacao: , 4*2')

print('Divisao: , 16/2')

print('Resto: , 48/9' )

print('Potenciacao: , 64**0.5')
-- OUTPUT:
Adicao: , 5 + 3
Subtracao: , 10-2
Multiplicacao: , 4*2
Divisao: , 16/2
Resto: , 48/9
Potenciacao: , 64**0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:14) 
-- CODE:
print('Adicao: , 5 + 3')

print('Subtracao: , 10-2')

print('Multiplicacao: , 4*2')

print('Divisao:  16/2')

print('Resto: , 48/9' )

print('Potenciacao: , 64**0.5')
-- OUTPUT:
Adicao: , 5 + 3
Subtracao: , 10-2
Multiplicacao: , 4*2
Divisao:  16/2
Resto: , 48/9
Potenciacao: , 64**0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:56:17) 
-- CODE:
print('Adicao: , 5 + 3')

print('Subtracao: , 10-2')

print('Multiplicacao: , 4*2')

print('Divisao:  16/2')

print('Resto: , 48/9' )

print('Potenciacao: , 64**0.5')
-- EXECUTION TIME:
0.206404
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: , 5 + 3
Subtracao: , 10-2
Multiplicacao: , 4*2
Divisao:  16/2
Resto: , 48/9
Potenciacao: , 64**0.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:36) 
-- CODE:
print('Adicao: , 5 + 3')

print('Subtracao: , 10-2')

print('Multiplicacao: , 4*2')

print('Divisao:  16/2')

print('Resto: , 48/9' )

print('Potenciacao: , 64**0.5')
-- OUTPUT:
Adicao: , 5 + 3
Subtracao: , 10-2
Multiplicacao: , 4*2
Divisao:  16/2
Resto: , 48/9
Potenciacao: , 64**0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:57) 
-- CODE:
print('Adicao: , 5 + 3)

print('Subtracao: , 10-2)

print('Multiplicacao: , 4*2)

print('Divisao:  16/2)

print('Resto: , 48/9 )

print('Potenciacao: , 64**0.5)
-- ERROR:
File "XXXX", line 1
    print('Adicao: , 5 + 3)
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:42) 
-- CODE:
print('Adicao: ' 5 + 3)

print('Subtracao: '  10-2)

print('Multiplicacao: ' 4*2)

print('Divisao: ' 16/2)

print('Resto: ' 48%9 )

print('Potenciacao: ' 64**0.5)
-- ERROR:
File "XXXX", line 1
    print('Adicao: ' 5 + 3)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:21) 
-- CODE:
print(''Adicao: '' 5 + 3)

print(''Subtracao: ''  10-2)

print(''Multiplicacao: '' 4*2)

print(''Divisao: '' 16/2)

print(''Resto: '' 48%9 )

print(''Potenciacao: ''' 64**0.5)
-- ERROR:
File "XXXX", line 1
    print(''Adicao: '' 5 + 3)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:38) 
-- CODE:
print(''Adicao: '' 5 + 3);

print(''Subtracao: ''  10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print(''Adicao: '' 5 + 3);
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:26) 
-- CODE:
print("Adicao: " 5 + 3);

print("Subtracao: "  10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print("Adicao: " 5 + 3);
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:07) 
-- CODE:
print("Adicao:" 5 + 3);

print("Subtracao: "  10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print("Adicao:" 5 + 3);
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:14) 
-- CODE:
print("Adicao: " 5 + 3);

print("Subtracao: "  10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- EXECUTION TIME:
0.196946
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 1
    print("Adicao: " 5 + 3);
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:28) 
-- CODE:
print("Adicao: " 5 + 3);

print(" Subtracao: "  10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- EXECUTION TIME:
0.157771
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 1
    print("Adicao: " 5 + 3);
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:29) 
-- CODE:
print("Adicao: " 5 + 3);

print(" Subtracao: "  10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print("Adicao: " 5 + 3);
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:17:17) 
-- CODE:
print(Adicao: 5 + 3);

print( 'Subtracao:   10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print(Adicao: 5 + 3);
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:18:47) 
-- CODE:
print(Adicao: 5 + 3);

print( Subtracao:   10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print(Adicao: 5 + 3);
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:18:47) 
-- CODE:
print(Adicao: 5 + 3);

print( Subtracao:   10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print(Adicao: 5 + 3);
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:18:48) 
-- CODE:
print(Adicao: 5 + 3);

print( Subtracao:   10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- EXECUTION TIME:
0.25172
-- ERROR:
  File "/home/codebench/codes/1575/1334/main.py", line 1
    print(Adicao: 5 + 3);
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:19:28) 
-- CODE:
print(Adicao: 5+3);

print( Subtracao: 10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print(Adicao: 5+3);
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:19:36) 
-- CODE:
print(Adicao: 5+3);

print( Subtracao: 10-2);

print(''Multiplicacao: '' 4*2);

print(''Divisao: '' 16/2);

print(''Resto: '' 48%9 );

print(''Potenciacao: '' 64**0.5);
-- ERROR:
File "XXXX", line 1
    print(Adicao: 5+3);
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:13:14) 
-- CODE:
print('Adicao:',6+2,);
x
print( 'Subtracao': ,10-2,);

print(''Multiplicacao: '' ,4*2,);

print(''Divisao: '' ,16/2,);

print(''Resto: '' ,48%9, );

print(''Potenciacao: '',64**0.5,);
-- ERROR:
File "XXXX", line 3
    print( 'Subtracao': ,10-2,);
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:14:27) 
-- CODE:
print('Adicao:',6+2,);

print( 'Subtracao:' ,10-2,);

print('Multiplicacao:' ,4*2,);

print('Divisao:' ,16/2,);

print( 'Resto:'  ,48%9, );

print('Potenciacao:',64**0.5,);
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 3
Potenciacao: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:16:04) 
-- CODE:
print('Adicao:',6+2,);

print( 'Subtracao:' ,10-2,);

print('Multiplicacao:' ,4*2,);

print('Divisao:' ,16/2,);

print( 'Resto:'  ,10%7, );

print('Potenciacao:',64**0.5,);
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 3
Potenciacao: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:16:17) 
-- CODE:
print('Adicao:',6+2,);

print( 'Subtracao:' ,10-2,);

print('Multiplicacao:' ,4*2,);

print('Divisao:' ,16/2,);

print( 'Resto:'  ,15%7, );

print('Potenciacao:',64**0.5,);
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 1
Potenciacao: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:16:55) 
-- CODE:
print('Adicao:',6+2,);

print( 'Subtracao:' ,10-2,);

print('Multiplicacao:' ,4*2,);

print('Divisao:' ,16/2,);

print( 'Resto:'  ,17%9, );

print('Potenciacao:',64**0.5,);
-- OUTPUT:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8
Potenciacao: 8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:16:59) 
-- CODE:
print('Adicao:',6+2,);

print( 'Subtracao:' ,10-2,);

print('Multiplicacao:' ,4*2,);

print('Divisao:' ,16/2,);

print( 'Resto:'  ,17%9, );

print('Potenciacao:',64**0.5,);
-- EXECUTION TIME:
0.150956
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao: 8
Subtracao: 8
Multiplicacao: 8
Divisao: 8.0
Resto: 8
Potenciacao: 8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:17:15) 
-- CODE:
print('Adicao: ',6+2,);

print( 'Subtracao: ' ,10-2,);

print('Multiplicacao: ' ,4*2,);

print('Divisao: ' ,16/2,);

print( 'Resto: '  ,17%9, );

print('Potenciacao: ',64**0.5,);
-- EXECUTION TIME:
0.145127
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:18:45) 
-- CODE:
print('Adicao:  ',6+2,);

print( 'Subtracao:  ' ,10-2,);

print('Multiplicacao: ' ,4*2,);

print('Divisao:  ' ,16/2,);

print( 'Resto:  '  ,17%9, );

print('Potenciacao:  ',64**0.5,);
-- EXECUTION TIME:
0.123967
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:   8
Subtracao:   8
Multiplicacao:  8
Divisao:   8.0
Resto:   8
Potenciacao:   8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:18:48) 
-- CODE:
print('Adicao:  ',6+2,);

print( 'Subtracao:  ' ,10-2,);

print('Multiplicacao: ' ,4*2,);

print('Divisao:  ' ,16/2,);

print( 'Resto:  '  ,17%9, );

print('Potenciacao:  ',64**0.5,);
-- OUTPUT:
Adicao:   8
Subtracao:   8
Multiplicacao:  8
Divisao:   8.0
Resto:   8
Potenciacao:   8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:19:47) 
-- CODE:
print('Adicao:  ',6+2,);

print( 'Subtracao:  ' ,10-2,);

print('Multiplicacao: ' ,4*2,);

print('Divisao:  ' ,16/2,);

print( 'Resto:  '  ,17%9, );

print('Potenciacao:  ',8*2,);
-- OUTPUT:
Adicao:   8
Subtracao:   8
Multiplicacao:  8
Divisao:   8.0
Resto:   8
Potenciacao:   16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:20:15) 
-- CODE:
print('Adicao:  ',6+2,);

print( 'Subtracao:  ' ,10-2,);

print('Multiplicacao: ' ,4*2,);

print('Divisao:  ' ,16/2,);

print( 'Resto:  '  ,17%9, );

print('Potenciacao:  ',2**3,);
-- OUTPUT:
Adicao:   8
Subtracao:   8
Multiplicacao:  8
Divisao:   8.0
Resto:   8
Potenciacao:   8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:20:18) 
-- CODE:
print('Adicao:  ',6+2,);

print( 'Subtracao:  ' ,10-2,);

print('Multiplicacao: ' ,4*2,);

print('Divisao:  ' ,16/2,);

print( 'Resto:  '  ,17%9, );

print('Potenciacao:  ',2**3,);
-- EXECUTION TIME:
0.12085
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:   8
Subtracao:   8
Multiplicacao:  8
Divisao:   8.0
Resto:   8
Potenciacao:   8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
